--- a/references.bib
+++ b/references.bib
@@ -13,3 +13,32 @@
   author={Wilensky, U},
   year={1999}
 }
+
+@article{schelling1971dynamic,
+  title={Dynamic models of segregation},
+  author={Schelling, Thomas C},
+  journal={Journal of Mathematical Sociology},
+  volume={1},
+  number={2},
+  pages={143--186},
+  year={1971},
+  publisher={Taylor \& Francis}
+}
+
+@book{schelling1978micromotives,
+  title={Micromotives and macrobehavior},
+  author={Schelling, Thomas C},
+  year={1978},
+  publisher={WW Norton \& Company}
+}
+
+@article{epstein2002modeling,
+  title={Modeling civil violence: An agent-based computational approach},
+  author={Epstein, Joshua M},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={99},
+  number={suppl 3},
+  pages={7243--7250},
+  year={2002},
+  publisher={National Acad Sciences}
+}
